# zynq7000-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  justfile  memory.x  rust-toolchain.toml
.cargo/: config.toml.template  def-config.toml
examples/embassy/: Cargo.toml
examples/embassy/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/zedboard/: Cargo.toml
examples/zedboard/src/: lib.rs  main.rs
experiments/: Cargo.toml
firmware/: Cargo.toml  gdb.gdb  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/examples/defmt/: Cargo.toml  memory.x
firmware/examples/defmt/src/: main.rs
firmware/examples/embassy/: Cargo.toml  memory.x
firmware/examples/embassy/src/: main.rs
firmware/examples/multiprio/: Cargo.toml
firmware/examples/multiprio/src/: main.rs
firmware/examples/simple/: Cargo.toml  memory.x
firmware/examples/zedboard/: Cargo.toml  memory.x
firmware/examples/zedboard/assets/: ferris-flat-happy.xcf  rust-logo-single-path.xcf
firmware/examples/zedboard/src/: lib.rs  main.rs
firmware/zedboard-bsp/: CHANGELOG.md  Cargo.toml
firmware/zedboard-bsp/src/: ddrc_config_autogen.rs  ddriob_config_autogen.rs  qspi_spansion.rs
firmware/zedboard-fsbl/: Cargo.toml  memory.x
firmware/zedboard-fsbl/src/: main.rs
firmware/zedboard-qspi-flasher/: Cargo.toml  README.md  memory.x
firmware/zedboard-qspi-flasher/src/: main.rs
firmware/zynq7000/: CHANGELOG.md  Cargo.toml  README.md
firmware/zynq7000-embassy/: CHANGELOG.md  Cargo.toml  README.md
firmware/zynq7000-embassy/src/: lib.rs
firmware/zynq7000-hal/: CHANGELOG.md  Cargo.toml  README.md
firmware/zynq7000-hal/src/: cache.rs  devcfg.rs  gic.rs  gtc.rs  i2c.rs  interrupt.rs  l2_cache.rs  lib.rs  log.rs  pl.rs  prelude.rs  priv_tim.rs  sdio.rs  time_driver_gtc.rs  ttc.rs
firmware/zynq7000-hal/src/clocks/: mod.rs  pll.rs
firmware/zynq7000-hal/src/ddr/: ll.rs  mod.rs
firmware/zynq7000-hal/src/eth/: embassy_net.rs  ll.rs  mod.rs  rx_descr.rs  smoltcp.rs  tx_descr.rs
firmware/zynq7000-hal/src/gpio/: mio.rs  mod.rs
firmware/zynq7000-hal/src/qspi/: mod.rs
firmware/zynq7000-hal/src/sd/: commands.rs  mod.rs  pins.rs
firmware/zynq7000-hal/src/spi/: asynch.rs  mod.rs  slave.rs
firmware/zynq7000-hal/src/uart/: mod.rs  rx.rs  tx.rs  tx_async.rs
firmware/zynq7000-mmu/: CHANGELOG.md  Cargo.toml  build.rs
firmware/zynq7000-mmu/src/: lib.rs
firmware/zynq7000-rt/: CHANGELOG.md  Cargo.toml
firmware/zynq7000-rt/src/: lib.rs  mmu.rs  mmu_table.rs  rt.rs
firmware/zynq7000/src/: axi.rs  ddrc.rs  devcfg.rs  eth.rs  gic.rs  gpio.rs  gtc.rs  i2c.rs  l2_cache.rs  lib.rs  mpcore.rs  priv_tim.rs  qspi.rs  sdio.rs  spi.rs  ttc.rs  uart.rs  xadc.rs
firmware/zynq7000/src/slcr/: clocks.rs  ddriob.rs  mio.rs  mod.rs  reset.rs
fsbl/: Cargo.toml  memory.x
host/: Cargo.toml
probe-rs-test/: Cargo.toml  openocd.cfg
scripts/: .gitignore  memory_ddr.x  memory_ocm.x  ps7_init.tcl  runner.sh  unittest.sh  xsct-flasher.tcl  xsct-init.tcl  zynq7000-init.py
tools/: Cargo.toml
vscode/: launch.json  tasks.json
zedboard-fpga-design/: .gitignore  README.md  sdtgen.py  zedboard-rust.tcl
zedboard-gateware/: README.md  export-hw.tcl  sdtgen.py  sdtgen.tcl  zedboard-rust.tcl
zynq/: Cargo.toml  gdb.gdb
zynq-mmu/: Cargo.toml
zynq-mmu/src/: lib.rs
zynq/.cargo/: config.toml
zynq/examples/embassy/: Cargo.toml
zynq/examples/embassy/src/: main.rs
zynq/examples/simple/: Cargo.toml
zynq/examples/simple/src/: main.rs
zynq/examples/zedboard/: Cargo.toml
zynq/examples/zedboard/src/: main.rs
zynq/zedboard-bsp/: CHANGELOG.md  Cargo.toml  README.md
zynq/zedboard-bsp/src/: ddrc_config_autogen.rs  ddriob_config_autogen.rs  lib.rs  phy_marvell.rs
zynq/zedboard-fsbl/: Cargo.toml  README.md
zynq/zedboard-fsbl/src/: main.rs
zynq/zedboard-qspi-flasher/: Cargo.toml  README.md  memory.x  qspi-flasher.tcl
zynq/zedboard-qspi-flasher/src/: main.rs
zynq/zynq7000/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  docs.sh
zynq/zynq7000-embassy/: CHANGELOG.md  Cargo.toml  README.md
zynq/zynq7000-embassy/src/: lib.rs
zynq/zynq7000-hal/: CHANGELOG.md  Cargo.toml  README.md  docs.sh
zynq/zynq7000-hal/src/: cache.rs  devcfg.rs  gic.rs  gtc.rs  i2c.rs  l2_cache.rs  lib.rs  log.rs  priv_tim.rs  sdio.rs  slcr.rs  time.rs  ttc.rs
zynq/zynq7000-hal/src/clocks/: mod.rs  pll.rs
zynq/zynq7000-hal/src/ddr/: ll.rs  mod.rs
zynq/zynq7000-hal/src/eth/: embassy_net.rs  ll.rs  mdio.rs  mod.rs  rx_descr.rs  smoltcp.rs
zynq/zynq7000-hal/src/gpio/: emio.rs  ll.rs  mio.rs  mod.rs
zynq/zynq7000-hal/src/qspi/: lqspi_configs.rs  mod.rs
zynq/zynq7000-hal/src/spi/: mod.rs
zynq/zynq7000-hal/src/uart/: mod.rs  rx.rs  tx.rs  tx_async.rs
zynq/zynq7000-mmu/: CHANGELOG.md  Cargo.toml  README.md
zynq/zynq7000-mmu/src/: lib.rs
zynq/zynq7000-rt/: CHANGELOG.md  Cargo.toml  README.md
zynq/zynq7000-rt/src/: lib.rs  mmu.rs  mmu_table.rs  rt.rs
zynq/zynq7000/src/: ddrc.rs  devcfg.rs  eth.rs  gic.rs  gpio.rs  gtc.rs  i2c.rs  l2_cache.rs  lib.rs  mpcore.rs  priv_tim.rs  qspi.rs  sdio.rs  spi.rs  ttc.rs  uart.rs  xadc.rs
zynq/zynq7000/src/slcr/: clocks.rs  ddriob.rs  mio.rs  mod.rs  reset.rs
zynq7000/: Cargo.toml  README.md
zynq7000-boot-image/: Cargo.toml
zynq7000-embassy/: Cargo.toml  README.md
zynq7000-embassy/src/: lib.rs
zynq7000-hal/: Cargo.toml  README.md
zynq7000-hal/src/: cache.rs  clocks.rs  ddr.rs  gic.rs  gtc.rs  i2c.rs  l2_cache.rs  lib.rs  log.rs  mmu.rs  slcr.rs  ttc.rs
zynq7000-hal/src/clocks/: mod.rs  pll.rs
zynq7000-hal/src/eth/: ll.rs  mdio.rs  mod.rs  rx_descr.rs  tx_descr.rs
zynq7000-hal/src/gpio/: emio.rs  ll.rs  mio.rs  mod.rs
zynq7000-hal/src/spi/: asynch.rs  mod.rs
zynq7000-hal/src/uart/: mod.rs  rx.rs  tx.rs  tx_async.rs
zynq7000-rt/: Cargo.toml  README.md  regen-table.sh
zynq7000-rt/src/: lib.rs  mmu.rs  mmu_table.rs  rt.rs
zynq7000/src/: ddrc.rs  eth.rs  gic.rs  gpio.rs  gtc.rs  i2c.rs  l2_cache.rs  lib.rs  mpcore.rs  spi.rs  ttc.rs  uart.rs
zynq7000/src/slcr/: clocks.rs  ddriob.rs  mio.rs  mod.rs  reset.rs
(+27 files in other folders)
