[workspace]
resolver = "3"
members = [
  "zynq7000-rt",
  "zynq7000-mmu",
  "zynq7000",
  "zynq7000-hal",
  "zynq7000-embassy",

  "examples/simple",
  "examples/embassy",
  "examples/zedboard",
  "examples/defmt",
  "examples/multiprio",

  "zedboard-bsp",
  "zedboard-qspi-flasher",
]

exclude = [
  # Exclude, can not be built with debug optimization level, too large.
  "zedboard-fsbl",
]

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# Optimize for maximum speed.
opt-level = 3
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2

[patch.crates-io]
embassy-executor = { path = "../../embassy/embassy-executor" }
embassy-executor-macros = { path = "../../embassy/embassy-executor-macros" }
embassy-time-driver = { path = "../../embassy/embassy-time-driver" }
embassy-time = { path = "../../embassy/embassy-time" }
embassy-executor-timer-queue = { path = "../../embassy/embassy-executor-timer-queue" }

