[workspace]
resolver = "3"
members = [
  "zynq7000-rt",
  "zynq7000-mmu",
  "zynq7000",
  "zynq7000-hal",
  "zynq7000-embassy",

  "examples/simple",
  "examples/embassy",
  "examples/zedboard",

  "zedboard-bsp",
  "zedboard-qspi-flasher",
]

exclude = [
  # Exclude, can not be built with debug optimization level, too large.
  "zedboard-fsbl",
]
