[package]
name = "zynq7000-rt"
version = "0.3.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2024"
description = "Run-time support for the Zynq7000 family of SoCs for running bare-metal applications"
homepage = "https://egit.irs.uni-stuttgart.de/rust/zynq7000-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/zynq7000-rs"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "rt", "cortex-a", "amd", "zynq7000"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
aarch32-rt = { version = "0.3", optional = true, features = ["fpu-d32"] }
aarch32-cpu = { version = "0.3" }
arbitrary-int = "2"
zynq7000-mmu = { path = "../zynq7000-mmu", version = "0.2" }

[build-dependencies]
arm-targets = { version = "0.4" }

[features]
default = ["rt"]
rt = ["dep:aarch32-rt"]
# This feature can be enabled if the DDR is accessed through memory addresses 0x8000 to 0x0010_0000.
# In this case, the MMU attribute for the first segment is the DDR memory attribute (outer and
# inner cache maintenance). Otherwise, the OCM attribute (inner cache maintenance only) will be
# used.
first-segment-ddr-attr = []

[package.metadata.docs.rs]
targets = ["armv7a-none-eabihf"]
rustdoc-args = ["--generate-link-to-definition"]
