[package]
name = "zynq7000-mmu"
description = "Zynq7000 MMU structures"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://egit.irs.uni-stuttgart.de/rust/zynq7000-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/zynq7000-rs"
keywords = ["no-std", "mmu", "bare-metal", "amd", "zynq7000"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
thiserror = { version = "2", default-features = false }
cortex-ar = { version = "0.3" }

[build-dependencies]
arm-targets = { version = "0.3" }

[features]
tools = []

[package.metadata.docs.rs]
targets = ["armv7a-none-eabihf"]
cargo-args = ["-Z", "build-std=core"]
rustdoc-args = ["--generate-link-to-definition"]
